Добавляет базовую стилизацию с помощью препроцессора (#6)

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,12 @@
 /* здесь используйте глобальные переменные */
+$base-color-text: #444444;
+$bg-color-green:  #68b738;
+$additional-color: #ffffff;
+$optional-color: #000000;
+
+/* здесь используйте глобальные переменные */
+$ad-special_dark-grey: #222222;
+$base-font-size-text: 14px;
+$base-font-size-text-desctop: 16px;
+$base-line-height: 18px;
+$text-transform: uppercase;
