--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,9 @@
+@use "./mixins.scss" as *;
+
 /* здесь подключите шрифты */
+$primary-font: "Lato", "Arial", sans-serif;
+$additional-font: "Oswald", "Arial", sans-serif;
+$font-weight: 400;
+
+@include font-face("Lato", 400, normal, url("../../fonts/lato/Lato-Regular.woff2") format("woff2"), swap);
+@include font-face("Oswald", 400, normal, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"), swap);
