--- a/source/styles/blocks/banner.scss
+++ b/source/styles/blocks/banner.scss
@@ -1,10 +1,28 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
 
+.banner {
+  padding: 100px;
+  background-color: rgba(104, 183, 56, 0.85);
+  background-image: url("../../images/catalog-images/catalog-desktop/catalog-background-desktop@2x.jpg");
+  background-repeat: no-repeat;
+}
+
 .banner__title {
+  position: relative;
   font-family: $primary-font;
   font-weight: $font-weight;
   font-size: $base-font-size-text-desctop;
   line-height: 20px;
   color: $additional-color;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 78px;
+    height: 81px;
+    background-color: #ffffff;
+    mask-image: url("../../icons/stack.svg#gift-icon");
+    mask-repeat: no-repeat;
+  }
 }
