--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -2,18 +2,44 @@
 @use "../common/variables.scss" ;
 
 
-.promo__title {
+.promo {
+  text-align: center;
   font-family: $additional-font;
   font-weight: $font-weight;
-  font-size: 60px;
-  line-height: 60px;
-  color: $optional-color;
+  line-height: 36px;
+  color: $additional-color;
+  background-size: cover;
+  background-position: 50%;
+  background-image: url("../../images/index-images/index-mobile/background-mobile@2x.jpg");
+  background-repeat: no-repeat;
+
+  @media (min-width: 768px) {
+    background-image: none;
+  }
+
+  @media (min-width: 1440px) {
+    background-image: url("../../images/index-images/index-desktop/background-desktop@2x.jpg");
+  }
+}
+
+.promo__title {
+  font-size: 36px;
+
+  @media (min-width: 768px) {
+    font-size: 60px;
+    line-height: 60px;
+    color: $optional-color;
+  }
 }
 
 .promo__description {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 20px;
-  line-height: 20px;
-  color: $optional-color;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: $text-transform;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 20px;
+    color: $optional-color;
+  }
 }
