--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,2 +1,74 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
+
+.slider {
+  position: relative;
+}
+
+.slider__list {
+  list-style-type: none;
+}
+
+.slider__button {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  padding: 0;
+  width: 4px;
+  background-color: #666666;
+  border: none;
+  border-radius: 2px;
+  height: 100%;
+  box-sizing: border-box;
+
+  &:hover {
+    background-color: $bg-color-green;
+  }
+
+  &:focus-visible {
+    outline-color: $bg-color-green;
+  }
+
+  &:active {
+    background-color: #5eaa2f;
+    opacity: 0, 6;
+  }
+
+  &:hover::before {
+    border-color: $bg-color-green;
+  }
+
+  &:focus-visible::before {
+    border-color: $bg-color-green;
+  }
+
+  &::before {
+    content: "";
+    background-color: $additional-color;
+    border: 2px solid #666666;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover::after {
+    background-color: $bg-color-green;
+  }
+
+  &::after {
+    content: "";
+    background-color: #666666;
+    width: 24px;
+    height: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    mask-image: url("../../icons/stack.svg#slider-arrow");
+    mask-repeat: no-repeat;
+  }
+}
