--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,2 +1,36 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
+
+.social__link {
+  display: block;
+  width: 28px;
+  height: 22px;
+  background-color: #666666;
+
+
+  &--vkontakte {
+    mask-image: url("../../icons/stack.svg#vkontakte");
+  }
+
+  &--youtube {
+    mask-image: url("../../icons/stack.svg#youtube");
+  }
+
+  &--telegram {
+    mask-image: url("../../icons/stack.svg#telegram");
+  }
+
+  &:hover {
+    background-color: $bg-color-green;
+  }
+
+  &:focus-visible {
+    background-color: $bg-color-green;
+  }
+
+  &:active {
+    background-color: $bg-color-green;
+    opacity: 0.3;
+  }
+}
+
