--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,6 +9,8 @@
 @import "./blocks/button.scss";
 @import "./blocks/navigation-logo.scss";
 @import "./blocks/logo-image.scss";
+@import "./blocks/button-wrapper.scss";
+@import "./blocks/burger-button.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/promo.scss";
