--- a/source/styles/blocks/history.scss
+++ b/source/styles/blocks/history.scss
@@ -1,16 +1,58 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
 
+.history {
+  padding: 25px 0;
+  background-color: #eaeaea;
+
+  @media (min-width: $tablet-width) {
+    background-color: #ffffff;
+    background-image: linear-gradient(to bottom, #ffffff 50%, #eaeaea 50%);
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 110px;
+    padding-right: 110px;
+    padding-bottom: 75px;
+    background-image: linear-gradient(to bottom, #ffffff 50%, #eaeaea 50%);
+  }
+}
+
+.history__wrapper {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    grid-template-columns: repeat(4, 250px);
+    grid-template-rows: repeat(8, auto);
+    column-gap: 79px;
+    max-width: 1240px;
+  }
+}
+
 .history__title {
   font-family: $additional-font;
   font-weight: $font-weight;
   font-size: 36px;
   line-height: 40px;
   color: $optional-color;
+  margin: 0;
+  margin-bottom: 40px;
+  padding-left: 20px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/-1;
+    margin-bottom: 60px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/3;
+    margin-bottom: 146px;
   }
 }
 
@@ -20,10 +62,48 @@
   font-size: 14px;
   line-height: 18px;
   color: $base-color-text;
+  padding: 0 20px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/-1;
+    margin-bottom: 55px;
     font-size: 16px;
     line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/3;
+    margin-bottom: 69px;
+    padding-right: 100px;
+  }
+}
+
+
+.history__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    justify-content: stretch;
+    gap: 43px;
+    margin-bottom: 99px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/3;
+    margin-bottom: 55px;
+  }
+}
+
+.history__item {
+  width: 124px;
+
+  @media (min-width: $tablet-width) {
+    width: 162px;
   }
 }
 
@@ -34,12 +114,18 @@
   line-height: 24px;
   color: $optional-color;
   text-transform: $text-transform;
+  padding-top: 15px;
+  padding-bottom: 17px;
+  text-align: center;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 30px;
     line-height: 37px;
   }
 }
+
 
 .history__description {
   font-family: $primary-font;
@@ -47,18 +133,62 @@
   font-size: 12px;
   line-height: 12px;
   color: $base-color-text;
+  margin-top: -12px;
+  margin-left: 20px;
+  width: 85px;
+  text-align: center;
+  background-color: #eaeaea;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
+    margin-top: -9px;
+    margin-left: 13px;
+    width: 135px;
     font-size: 14px;
     line-height: 14px;
+    background-color: #ffffff;
   }
 }
 
 .history__cost {
+  margin: 0;
+  text-align: center;
   font-family: $additional-font;
   font-weight: $font-weight;
   font-size: 20px;
   line-height: 20px;
   color: $optional-color;
   text-transform: $text-transform;
+
+  @media (min-width: $tablet-width) {
+    align-self: center;
+    margin-left: auto;
+    margin-bottom: 99px;
+    width: 120px;
+    font-size: 20px;
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/3;
+    margin-left: 0;
+    margin-bottom: 0;
+    text-align: left;
+    width: 600px;
+
+    & > span {
+      margin-left: 70px;
+    }
+  }
+}
+
+.slider {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 3/-1;
+    grid-row: 1/-1;
+  }
 }
