--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,7 +3,8 @@ $base-color-text: #444444;
 $bg-color-green:  #68b738;
 $additional-color: #ffffff;
 $optional-color: #000000;
-
+$tablet-width: 768px;
+$desktop-width: 1440px;
 /* здесь используйте глобальные переменные */
 $ad-special_dark-grey: #222222;
 $base-font-size-text: 14px;
