--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,2 +1,19 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
+
+
+.main-header {
+  min-width: 320px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 768px) {
+    min-width: 768px;
+    padding: 0 30px;
+  }
+
+  @media (min-width: 1440px) {
+    min-width: 1440px;
+  }
+}
