--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -8,14 +8,28 @@
   font-size: 20px;
   line-height: 30px;
   text-transform: $text-transform;
+  padding: 13px 0 15px;
+  display: flex;
+  align-items: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 18px;
+    padding-top: 25px;
+    padding-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 18px;
+    padding-top: 25px;
+    padding-bottom: 0;
   }
 }
 
-
 .navigation__logo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+
   &:hover {
     opacity: 0.8;
   }
@@ -33,19 +47,64 @@ picture {
   font-size: 0;
 }
 
+.navigation__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 704px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+  }
+}
+
+
+.navigation__logo-text {
+  margin-left: 56px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 13px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 118px;
+  }
+}
+
 .navigation__item {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     &--current {
       border-bottom: 2px solid $bg-color-green;
     }
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     &--current {
       border-color: #ffffff;
     }
   }
 }
+
+.navigation__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 33px;
+    margin-left: auto;
+  }
+}
+
 
 .navigation__link {
   display: block;
@@ -64,7 +123,11 @@ picture {
     opacity: 0.3;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $tablet-width) {
+    padding: 12px 0;
+  }
+
+  @media (min-width: $desktop-width) {
     color: $additional-color;
     font-size: 20px;
   }
