--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -10,22 +10,31 @@
   color: $additional-color;
   background-size: cover;
   background-position: 50%;
-  background-image: url("../../images/index-images/index-mobile/background-mobile@2x.jpg");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 60%, #ffffff 40%), url("../../images/index-background-mobile@2x.jpg");
   background-repeat: no-repeat;
+  padding-top: 27px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     background-image: none;
+    padding-top: 65px;
+    padding-left: 73px;
+    text-align: left;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     background-image: url("../../images/index-images/index-desktop/background-desktop@2x.jpg");
+    padding-left: 195px;
+    background-color: transparent;
   }
 }
 
 .promo__title {
   font-size: 36px;
+  margin: 0;
+  margin-bottom: 25px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 40px;
     font-size: 60px;
     line-height: 60px;
     color: $optional-color;
@@ -36,8 +45,11 @@
   font-size: 14px;
   line-height: 14px;
   text-transform: $text-transform;
+  margin: 0;
+  margin-bottom: 29px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 50px;
     font-size: 20px;
     line-height: 20px;
     color: $optional-color;
