--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -2,25 +2,85 @@
 @use "../common/variables.scss" ;
 
 .button {
+  background-color: $bg-color-green;
   font-family: $additional-font;
-  font-weight: $font-weight;
   font-size: 16px;
   line-height: 20px;
-  color: #ffffff;
+  color: $additional-color;
   text-transform: $text-transform;
-  background-color: $bg-color-green;
   text-decoration: none;
+  display: block;
 
-  @media (min-width: 768px) {
-    font-size: 20px;
-    line-height: 26px;
+  &--products {
+    display: block;
+    padding: 10px 109px;
+    margin: 0 auto;
+
+    &:hover {
+      background-color: #5eaa2f;
+    }
+
+    &:focus-visible {
+      outline-color: $bg-color-green;
+    }
+
+    &:active {
+      color: rgba(255, 255, 255, 0.3);
+    }
+
+    @media (min-width: $tablet-width) {
+      width: 250px;
+      padding: 10px 94px;
+      margin: 32px auto 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 169px;
+      padding: 10px 54px;
+    }
   }
 
-  &--background-color {
+  &--change {
     background-color: #f2f2f2;
+    color: #444444;
+    padding: 10px 95px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 24px;
+
+    @media (min-width: $tablet-width) {
+      width: 250px;
+      padding: 10px 80px;
+      margin: 0 auto;
+      margin-bottom: 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 169px;
+      padding: 10px 39px;
+    }
   }
 
-  &--text-color {
-    color: $base-color-text;
+  &--additional {
+    margin-bottom: 19px;
+
+    @media (min-width: $tablet-width) {
+      width: 100%;
+      padding: 10px 285px;
+      margin-bottom: 27px;
+    }
+  }
+
+  &--news {
+    border: none;
+    padding: 15px 82px;
+    width: 280px;
+    margin: 0 auto;
+
+    @media (min-width: $tablet-width) {
+      padding: 15px 70px;
+      margin: 0;
+      max-height: 56px;
+    }
   }
 }
