--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -2,7 +2,11 @@
 @use "../common/variables.scss" ;
 
 .catalog {
-  padding-top: 27px;
+  margin-top: 27px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 65px;
+  }
 }
 
 .catalog__title {
@@ -12,8 +16,28 @@
   line-height: 36px;
   color: $optional-color;
   margin: 0;
-  padding-bottom: 41px;
+  margin-bottom: 41px;
   border-bottom: 1px solid #ebebeb;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 165px;
+    border: none;
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
+
+.catalog__list {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    column-gap: 80px;
+  }
 }
 
 .catalog__item {
@@ -24,12 +48,35 @@
   padding-bottom: 25px;
   border-top: 1px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
+
+  @media (min-width: $tablet-width) {
+    background-color: #f2f2f2;
+    width: 324px;
+    margin-bottom: 141px;
+    display: block;
+    padding: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    margin-bottom: 144px;
+  }
+}
+
+.catalog__item-image {
+  margin: 0 auto;
+  display: block;
 }
 
 .catalog__image-link {
   grid-column: 1/2;
   grid-row: 1/3;
   place-self: center center;
+
+  @media (min-width: $tablet-width) {
+    top: -70px;
+    position: relative;
+  }
 }
 
 .catalog__title-link {
@@ -50,48 +97,70 @@
   color: $ad-special_dark-grey;
   margin: 0;
   margin-bottom: 14px;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
 
 .catalog__info {
   margin: 0;
+  margin-bottom: 17px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 32px;
+    padding: 0 37px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 32px;
+    padding: 0 38px;
+  }
 }
 
 .catalog__info-title {
-  font-family: $primary-font;
   font-weight: $font-weight;
   font-size: 12px;
   line-height: 16px;
   color: $base-color-text;
-  text-transform: $text-transform;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .catalog__info-description {
-  font-family: $primary-font;
   font-weight: $font-weight;
   font-size: 12px;
   line-height: 16px;
   color: $base-color-text;
   margin-left: 0;
   justify-self: end;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
-.catalog__button {
-  grid-column: 1/-1;
-  margin-top: 17px;
-  padding: 10px 109px;
+.card__info {
+  text-align: center;
+  max-width: 320px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #ebebeb;
 
-  &:hover {
-    background-color: #5eaa2f;
+  @media (min-width: $tablet-width) {
+    border: none;
+    width: 324px;
   }
 
-  &:focus-visible {
-    outline-color: $bg-color-green;
-  }
-
-  &:active {
-    color: rgba(255, 255, 255, 0.3);
+  @media (min-width: $desktop-width) {
+    width: 245px;
   }
 }
 
@@ -99,6 +168,11 @@
   grid-column: 1/-1;
   justify-self: center;
   margin-bottom: 8px;
+  margin-top: 25px;
+
+  br {
+    display: none;
+  }
 
   &::before {
     content: " ";
@@ -111,13 +185,47 @@
     background-repeat: no-repeat;
     background-position: center;
   }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 23px;
+    text-align: center;
+    font-size: 20px;
+
+    &::before {
+      margin-top: 50px;
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 38px;
+    margin-bottom: 26px;
+
+    &::before {
+      margin: 0 55px 40px;
+    }
+  }
 }
 
 .catalog__item-subtitle {
   grid-column: 1/-1;
   justify-self: center;
   margin: 0;
-  margin-bottom: 4px;
+  margin-bottom: 21px;
   font-size: 12px;
   line-height: 16px;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    font-size: 16px;
+    line-height: 18px;
+    width: 170px;
+    margin: 0 auto;
+    margin-bottom: 82px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 90px;
+  }
 }
