--- a/source/styles/blocks/feature.scss
+++ b/source/styles/blocks/feature.scss
@@ -1,71 +1,138 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
 
-.feature-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.feature {
-  display: flex;
-  flex-direction: column;
+.feature__list {
+  list-style-type: none;
 
   @media (min-width: $tablet-width) {
-    padding: 0 30px 30px;
+    width: 708px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 82px 110px 71px 80px;
-    max-width: 570px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 80px;
+    width: 1280px;
+  }
+}
+
+.feature__item {
+  position: relative;
+  background-color: #f2f2f2;
+  padding: 30px  18px;
+  margin-bottom: 20px;
+
+  &--slim::before {
+    content: "";
+    position: absolute;
+    display: block;
+    background-image: url("../../icons/stack.svg#cat-slim");
+    background-repeat: no-repeat;
+    background-size: 36px 50px;
+    width: 36px;
+    height: 50px;
+    left: 27px;
+    top: 24px;
+    z-index: 1;
+
+    @media (min-width: $tablet-width) {
+      background-size: 140px 194px;
+      width: 140px;
+      height: 194px;
+      margin-left: 475px;
+      top: 77px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-size: 70px 97px;
+      width: 70px;
+      height: 97px;
+      top: 41px;
+      margin-left: 34px;
+    }
+  }
+
+  &--pro::before {
+    content: "";
+    position: absolute;
+    display: block;
+    background-image: url("../../icons/stack.svg#cat-pro");
+    background-repeat: no-repeat;
+    background-size: 67px 28px;
+    width: 67px;
+    height: 28px;
+    left: 13px;
+    top: 35px;
+    z-index: 1;
+
+    @media (min-width: $tablet-width) {
+      background-size: 268px 200px;
+      width: 268px;
+      height: 200px;
+      margin-left: 411px;
+      top: 80px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-size: 134px 56px;
+      width: 134px;
+      height: 56px;
+      top: 67px;
+      margin-left: 16px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 77px 63px 57px 52px;
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 570px;
+    margin-bottom: 0;
   }
 }
 
 
 .feature__title {
-  display: flex;
   margin: 0;
-  margin-left: 71px;
-  margin-bottom: 29px;
-  position: relative;
   font-family: $additional-font;
-  font-weight: $font-weight;
   font-size: 24px;
   line-height: 37px;
-  color: $optional-color;
   text-transform: $text-transform;
+  color: $optional-color;
+  font-weight: $font-weight;
+  margin-bottom: 29px;
+  padding-left: 90px;
 
   &::before {
-    display: block;
     content: "";
+    position: absolute;
+    display: block;
+    background-color: $bg-color-green;
     width: 50px;
     height: 50px;
-    background-color: $bg-color-green;
-    border-radius: 100%;
-  }
+    border-radius: 50%;
+    top: 25px;
+    left: 20px;
 
-  &::after {
-    position: absolute;
-    content: "";
-  }
+    @media (min-width: $tablet-width) {
+      margin-left: 445px;
+      width: 200px;
+      height: 200px;
+      top: 85px;
+    }
 
-  &--slim-icon::after {
-    top: -3px;
-    left: 7px;
-    width: 36px;
-    height: 50px;
-    background-image: url("../../icons/stack.svg#cat-slim");
-  }
-
-  &--pro-icon::after {
-    top: 10px;
-    left: -10px;
-    width: 67px;
-    height: 28px;
-    background-image: url("../../icons/stack.svg#cat-pro");
+    @media (min-width: $desktop-width) {
+      width: 100px;
+      height: 100px;
+      margin-left: 25px;
+      top: 42px;
+    }
   }
 
   @media (min-width: $tablet-width) {
-    margin-left: 0;
+    padding-left: 0;
     margin-bottom: 24px;
     font-size: 36px;
     line-height: 36px;
@@ -73,34 +140,31 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 73px;
+    text-align: center;
   }
 }
 
 .feature__description {
   margin: 0;
-  margin-bottom: 15px;
-  padding-right: 13px;
-  padding-bottom: 23px;
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 14px;
-  line-height: 18px;
-  color: $base-color-text;
   border-bottom: 1px solid #d9d9d9;
+  margin-bottom: 23px;
 
   @media (min-width: $tablet-width) {
+    width: 340px;
+    padding-left: 0;
+    margin-bottom: 48px;
+    border: none;
     font-size: 16px;
     line-height: 24px;
-    color: $optional-color;
-    padding-right: 0;
-    padding-bottom: 48px;
-    border-bottom: none;
+
+    br {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    min-width: 457px;
-    padding-bottom: 23px;
-    margin: 0;
+    width: 457px;
+    margin-bottom: 23px;
   }
 }
 
