--- a/source/styles/blocks/history.scss
+++ b/source/styles/blocks/history.scss
@@ -2,18 +2,17 @@
 @use "../common/variables.scss" ;
 
 .history {
-  padding: 25px 0;
+  margin-top: 25px;
   background-color: #eaeaea;
 
   @media (min-width: $tablet-width) {
+    margin-top: 45px;
     background-color: #ffffff;
     background-image: linear-gradient(to bottom, #ffffff 50%, #eaeaea 50%);
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 110px;
-    padding-right: 110px;
-    padding-bottom: 75px;
+    margin-top: 69px;
     background-image: linear-gradient(to bottom, #ffffff 50%, #eaeaea 50%);
   }
 }
@@ -41,7 +40,6 @@
   color: $optional-color;
   margin: 0;
   margin-bottom: 40px;
-  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
@@ -62,7 +60,7 @@
   font-size: 14px;
   line-height: 18px;
   color: $base-color-text;
-  padding: 0 20px;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
@@ -158,12 +156,13 @@
   line-height: 20px;
   color: $optional-color;
   text-transform: $text-transform;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     align-self: center;
     margin-left: auto;
     margin-bottom: 99px;
-    width: 120px;
+    width: 174px;
     font-size: 20px;
     text-align: right;
   }
