--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -6,7 +6,7 @@
   background-color: #f2f2f2;
 
   @media (min-width: $tablet-width) {
-    padding: 55px 30px;
+    padding: 55px 0;
   }
 }
 
@@ -23,7 +23,6 @@
 }
 
 .main-footer__text {
-  margin: 0;
   margin-right: auto;
   font-size: 16px;
   line-height: 20px;
@@ -75,8 +74,8 @@
 
 .main-footer__logo-copyright {
   display: flex;
-  justify-self: center;
-  padding: 20px 0 40px;
+  justify-content: space-between;
+  padding: 20px 20px 40px;
   align-items: center;
   text-decoration: none;
 
@@ -104,4 +103,10 @@
     grid-column: 3/4;
     justify-self: flex-end;
   }
+}
+
+.copyright__logo {
+  fill: #68b738;
+  width: 27px;
+  height: 34px;
 }
