--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -3,17 +3,17 @@
 
 
 .main-header {
-  min-width: 320px;
-  padding: 0 20px;
   display: flex;
   flex-direction: column;
+}
 
-  @media (min-width: 768px) {
-    min-width: 768px;
-    padding: 0 30px;
-  }
+.main-header__logo {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+  align-items: center;
 
-  @media (min-width: 1440px) {
-    min-width: 1440px;
+  @media (min-width: $tablet-width) {
+    margin-right: 84px;
   }
 }
