--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -1,27 +1,17 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
 
-.navigation {
-  text-decoration: none;
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 20px;
-  line-height: 30px;
-  text-transform: $text-transform;
-  padding: 13px 0 15px;
-  display: flex;
-  align-items: center;
+.main-nav {
+  width: 100%;
+  background: #ffffff;
+  z-index: 3;
 
-  @media (min-width: $tablet-width) {
-    font-size: 18px;
-    padding-top: 25px;
-    padding-bottom: 0;
-  }
+  &--change {
+    border-bottom: 1px solid #d9d9d9;
 
-  @media (min-width: $desktop-width) {
-    font-size: 18px;
-    padding-top: 25px;
-    padding-bottom: 0;
+    @media (min-width: $tablet-width) {
+      border: none;
+    }
   }
 }
 
@@ -43,24 +33,6 @@
   }
 }
 
-picture {
-  font-size: 0;
-}
-
-.navigation__wrapper {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    justify-content: space-between;
-    width: 704px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1220px;
-  }
-}
-
-
 .navigation__logo-text {
   margin-left: 56px;
 
@@ -69,47 +41,32 @@ picture {
   }
 
   @media (min-width: $desktop-width) {
+    margin-left: 14px;
     width: 118px;
   }
 }
 
-.navigation__item {
-  @media (min-width: $tablet-width) {
-    &--current {
-      border-bottom: 2px solid $bg-color-green;
-    }
-  }
-
-  @media (min-width: $desktop-width) {
-    &--current {
-      border-color: #ffffff;
-    }
-  }
-}
-
-.navigation__list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+.main-nav__user {
+  padding-top: 13px;
+  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
     display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    margin-left: auto;
+    padding-top: 25px;
+    padding-left: 30px;
   }
 
   @media (min-width: $desktop-width) {
-    gap: 33px;
-    margin-left: auto;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
-
 
 .navigation__link {
   display: block;
   color: #000000;
   text-decoration: none;
+
 
   &:hover {
     opacity: 0.6;
@@ -123,12 +80,103 @@ picture {
     opacity: 0.3;
   }
 
-  @media (min-width: $tablet-width) {
-    padding: 12px 0;
-  }
-
   @media (min-width: $desktop-width) {
     color: $additional-color;
     font-size: 20px;
   }
+}
+
+.main-nav__user--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  box-shadow: 0 6px 00 #000000, 0 12px 00 #000000;
+  right: 6px;
+  top: 0;
+}
+
+.main-nav__user--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    background-color: #000000;
+    right: 6px;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav__user--closed .site-list__item {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+}
+
+.main-nav__toggle {
+  position: absolute;
+  background-color: #ffffff;
+  border: none;
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  background-size: 18px 18px;
+  cursor: pointer;
+  right: 20px;
+  top: 25px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 704px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-left: auto;
+  }
+}
+
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+}
+
+
+.main-nav__user--nojs .main-nav__toggle {
+  display: none;
+}
+
+.main-nav__user--nojs .main-nav {
+  position: static;
+  min-height: 0;
+}
+
+.main-nav--nojs .site-list__item {
+  display: block;
+}
+
+.main-nav--nojs .user-list__item {
+  display: block;
 }
