--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -10,20 +10,18 @@
   color: $additional-color;
   background-size: cover;
   background-position: 50%;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 60%, #ffffff 40%), url("../../images/index-background-mobile@2x.jpg");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 60%, #ffffff 40%), url("../../images/index-images/index-mobile/background-mobile@2x.jpg");
   background-repeat: no-repeat;
-  padding-top: 27px;
+  margin-top: 27px;
 
   @media (min-width: $tablet-width) {
     background-image: none;
-    padding-top: 65px;
-    padding-left: 73px;
+    margin-top: 65px;
     text-align: left;
   }
 
   @media (min-width: $desktop-width) {
     background-image: url("../../images/index-images/index-desktop/background-desktop@2x.jpg");
-    padding-left: 195px;
     background-color: transparent;
   }
 }
@@ -38,6 +36,7 @@
     font-size: 60px;
     line-height: 60px;
     color: $optional-color;
+    padding-left: 90px;
   }
 }
 
@@ -53,5 +52,18 @@
     font-size: 20px;
     line-height: 20px;
     color: $optional-color;
+    padding-left: 90px;
   }
+}
+
+.promo__image {
+  display: block;
+  margin: 0 auto;
+}
+
+.promo__link {
+  padding: 10px 64px;
+  width: 280px;
+  margin: 0 auto;
+  display: block;
 }
